--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
   "name": "doing/password",
   "description": "password tool",
-  "keywords": ["password","tool"],
+  "keywords": [
+    "password",
+    "tool"
+  ],
   "type": "library",
   "license": "MIT",
   "authors": [
@@ -14,5 +17,8 @@
     "php": ">=5.3"
   },
   "autoload": {
+    "psr-4": {
+      "lib\\": "lib"
+    }
   }
 }
