--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,8 @@
 {
   "name": "doing/tool",
   "description": "tool",
-  "keywords": [
-    "tool password"
-  ],
+  "keywords": ["tool", "password"],
+
   "type": "library",
   "license": "MIT",
   "authors": [
@@ -16,8 +15,6 @@
     "php": ">=5.3"
   },
   "autoload": {
-    "psr-4": {
-//      "Tool\\": "Password"
-    }
+    "psr-4": {}
   }
 }
