--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
     "php": ">=5.3"
   },
   "autoload": {
+    "files":[
+      "Doing/functions.php"
+    ],
     "psr-4": {
      "Doing\\tool\\": "src/Doing"
     }
