--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   },
   "autoload": {
     "files":[
-      "Doing/functions.php"
+      "Doing/src/functions.php"
     ],
     "psr-4": {
      "Doing\\tool\\": "src/Doing"
